--- a/fpm.toml
+++ b/fpm.toml
@@ -1,12 +1,12 @@
 name = "fmmap"
 description = "Memory mapped files in Fortran"
-version = "0.11.3"
+version = "1.0.0"
 categories = ["io"]
 keywords = ["mmap", "memory", "mapped", "files"]
 license = "GPL-3.0-only"
 author = "Pierre Hugonnet"
 maintainer = "Pierre Hugonnet"
-copyright = "Copyright 2024, Pierre Hugonnet"
+copyright = "Copyright 2024-2025, Pierre Hugonnet"
 homepage = "https://github.com/PierUgit/fmmap"
 [build]
 auto-executables = true
